--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -21,7 +21,7 @@
 
             <% # Video embed %>
 
-          <% unless post.video_url.empty? %>
+          <% unless post.video_url.blank? %>
           <div class="d-flex justify-content-start">
             <iframe max-width="80%" height="auto" src="<%= video_embed(post.video_url) %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
