fixed img sizing, add collapse to buttons

--- a/app/views/posts/_card-footer.html.erb
+++ b/app/views/posts/_card-footer.html.erb
@@ -7,12 +7,13 @@
     <% if like_exists %>
       <%= link_to "Unlike", post_like_path(post, like_exists), method: :delete, class: "btn btn-dark" %>
     <% else %>
-      <%= link_to "Like", post_likes_path(post), method: :post, class: "btn btn-dark" %>
+      <%= link_to fa_icon("thumbs-up"), post_likes_path(post), method: :post, class: "btn btn-dark" %>
     <% end %>
 
+
   <% if Current.user == post.user %>
-    <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
-    <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, id: "btnDelete", class: "btn btn-danger" %>
+    <%= link_to fa_icon("pencil-alt"), edit_post_path(post), class: "btn btn-primary" %>
+    <%= link_to fa_icon("trash-alt"), post, method: :delete, data: { confirm: "Are you sure?" }, id: "btnDelete", class: "btn btn-danger" %>
   <% end %>
  
 <% end %>
