--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  *= require_tree .
  *= require_self
  */
-
+/*
+ *= require font-awesome
+ */
 .nav_avatar {
   border-radius: 54px;
   border: 1px solid black;
