--- a/app/views/posts/_images.html.erb
+++ b/app/views/posts/_images.html.erb
@@ -1,7 +1,6 @@
 
   <% if post.pictures.count == 1 %>
-  <div class="d-flex justify-content-center">
-      <%= image_tag post.pictures[0], class: "card-img-top", style: "width: auto; max-height: 300px;" %>    
+  <div class="d-flex justify-content-center" style="width: 600px; height: 300px;background-repeat: no-repeat;background-size: contain;background-position: center; background-image: url('<%= url_for post.pictures[0] %>')">
   </div>
   <% else %> 
 
