--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,9 +12,9 @@
   </div>
 <% end %>
 
-<div class="container"> 
+<div class="container-fluid"> 
   <div class="row justify-content-center mt-3">
-    <div class="col-12 col-md-9 d-flex flex-column justify-content-center">  
+    <div class="col-12 col-lg-8 d-flex flex-column justify-content-center">  
     <% if Current.user %>
       <%= render "form", post: @post %>
     <% end %> 
