--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -20,12 +20,11 @@
           </div>
 
             <% # Video embed %>
-
-          <% unless post.video_url.empty? %>
-          <div class="d-flex justify-content-start">
-            <iframe max-width="80%" height="auto" src="<%= video_embed(post.video_url) %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <% end %>
+            <% unless post.video_url.empty? %>
+            <div class="d-flex justify-content-center">
+              <iframe max-width="100%" height="auto" src="<%= video_embed(post.video_url) %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <% end %>
 
         <% # Post message %>
           <p class="card-title my-3 ms-3">
