--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+    <% if Current.user %>
+      <% if Current.user.first_name == "Bernard" %>
+      
+    <div style="font-family: 'Flow Circular', cursive;">
+
+      <% else %>
+    <div>
+      <% end %>
+    <% end %>
+  
     <%= render "shared/navbar" %>
 
     <% if notice.present? %>
@@ -21,7 +31,7 @@
     <% end %>
 
     <%= yield %>
-    
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
