--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,8 +17,12 @@
  *= require font-awesome
  */
 
-@import url("https://fonts.googleapis.com/css2?family=Libre+Barcode+EAN13+Text&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Flow+Circular&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+
+* {
+  font-family: "DM Sans", sans-serif;
+}
 
 .nav_avatar {
   border-radius: 54px;
