fixed modal bug

--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -33,8 +33,8 @@
               <%= post.message %>
             <% else %>
               <%= truncate(post.message, length: 280) %>
-              <a class="text-primary" data-bs-toggle="modal" data-bs-target="#postModal">Continue reading</a>
-               <div class="modal fade" id="postModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+              <a class="text-primary" data-bs-toggle="modal" data-bs-target="#postModal_<%= post.id %>">Continue reading</a>
+               <div class="modal fade" id="postModal_<%= post.id %>" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-scrollable">
                   <div class="modal-content">
                     <div class="modal-header">
